Added JoolOperations Tests
Refactored Zip Benchmarks